# sshy

./: .gitignore  Cargo.toml  README.md
README/: dev.md  schema.erd
src/: lib.rs  main.rs
src/config/: mod.rs
src/error/: mod.rs
src/ssh/: mod.rs
src/ssh/app/: credentials.rs  group.rs  mod.rs  register_key.sh  server.rs
src/ssh/domain/: credentials.rs  group.rs  mod.rs  server.rs
src/ssh/dtos/: mod.rs
src/ssh/infra/repository/: credentials.rs  group.rs  mod.rs  schema.sql  server.rs
