[package]
name = "sshy"
version = "0.1.0"
edition = "2021"

[dependencies]
# error
thiserror = "2.0.11"
# logs
log = "0.4.25"
env_logger = "0.11.6"
# serde
serde = "1.0.114"
serde_json = "1.0.138"
serde_derive = "1.0.114"
# uuid
uuid = {version="1.15.1", features = ["v4"]}
# utils
inquire = "0.7.5"
dirs = "6.0.0"