[package]
name = "sshy"
version = "0.1.0"
edition = "2021"

[dependencies]
# error
thiserror = "2.0.12"
# logs
log = "0.4.25"
env_logger = "0.11.6"
# serde
serde = "1.0.114"
serde_json = "1.0.138"
serde_derive = "1.0.114"
# uuid
uuid = {version="1.15.0", features = ["v4"]}
# utils
dirs = "6.0.0"

# sqite
futures = "0.3.18"
async-trait = "0.1.88"
async-std = { version = "1.6", features = ["attributes"] }
sqlx = { version = "0.5.9", features=["runtime-async-std-native-tls", "sqlite"] }

## cli
clap = { version = "4.5.32", features = ["derive"] }
inquire = "0.7.5"
colorize = "0.1.0"
strum = "0.27"
strum_macros = "0.27"