[package]
name = "sshy"
version = "0.1.0"
edition = "2021"

[dependencies]
# error
thiserror = "2.0.12"
# logs
log = "0.4.25"
env_logger = "0.11.6"
# serde
serde = "1.0.114"
serde_json = "1.0.138"
serde_derive = "1.0.114"
# uuid
uuid = {version="1.15.0", features = ["v4", "serde"]}
# utils
dirs = "6.0.0"

# sqite
futures = "0.3.18"
async-trait = "0.1.88"
async-std = { version = "1.13.1", features = ["attributes"] }
sqlx = { version = "0.8.3", features=["runtime-async-std-native-tls", "sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled", "sqlcipher"] }

## cli
clap = { version = "4.5.32", features = ["derive"] }
inquire = "0.7.5"
colorize = "0.1.0"
strum = "0.27"
strum_macros = "0.27"